--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,10 @@
                     <!-- Additional required wrapper -->
                     <div class="swiper-wrapper">
                       <!-- Slides -->
-                      @@include('./pages/slide-1.html')
-                      @@include('./pages/slide-2.html')
-                      @@include('./pages/slide-3.html')
+                      <!-- @@include('./pages/slide-1.html') -->
+                      <!-- @@include('./pages/slide-2.html') -->
+                      <!-- @@include('./pages/slide-3.html') -->
+                      @@include('./pages/slide-4.html')
                       ...
                     </div>
                     <!-- If we need pagination -->
