--- a/src/pages/slide-2.html
+++ b/src/pages/slide-2.html
@@ -1,1 +1,17 @@
-<div class="swiper-slide">Slide 2</div>
+<div class="swiper-slide who">
+    <div class="who__zel">
+        <div class="who__ava">
+            <img class="who__round" src="@img/round.png" alt="round">
+            <img src="@img/who.png" alt="who" class="who__who">
+        </div>
+        <div class="who__label">Разработка баз данны</div> <br>
+        <div class="who__label">Правильная организация  баз данных</div> <br>
+        <div class="who__label">Процесс организации правильного хранения баз данных</div>
+    </div>
+
+    <div class="who__descr">
+        В общих чертах: он делает готовую платформу, которая осуществляет <br>
+        сбор, анализ и хранение некой информации, хранящейся в бд.  <br>
+       <span>Если быть точнее - он делает платформу для БД.</span>
+    </div>
+</div>
