--- a/src/pages/slide-3.html
+++ b/src/pages/slide-3.html
@@ -1,1 +1,33 @@
-<div class="swiper-slide">Слайдик 3</div>
+<div class="swiper-slide variety">
+    <h2 class="variety__title">
+        Электронные информационные системы 
+    </h2>
+    <div class="variety__block">
+        <div class="variety__block-left">
+            <div class="variety__block-left-line">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div class="variety__block-left-img">
+                <div class="variety__block-left-img-wifi">
+                    Не сетевые
+                </div>
+                <img src="@img/exc.png" alt="exc">
+            </div>
+        </div>
+        <div class="variety__block-right">
+            <div class="variety__block-right-line">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div class="variety__block-right-img">
+                <div class="variety__block-right-img-web">
+                    Сетевые
+                </div>
+                <img src="@img/fc.png" alt="fc">
+            </div>
+        </div>
+    </div>
+</div>
