--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
                       <!-- @@include('./pages/slide-1.html') -->
                       <!-- @@include('./pages/slide-2.html') -->
                       <!-- @@include('./pages/slide-3.html') -->
-                      @@include('./pages/slide-4.html')
+                      <!-- @@include('./pages/slide-4.html') -->
+                      @@include('./pages/slide-5.html')
                       ...
                     </div>
                     <!-- If we need pagination -->
