--- a/src/pages/slide-4.html
+++ b/src/pages/slide-4.html
@@ -18,18 +18,18 @@
     </div>
     <div class="system__query system__arrow">
         <img src="@img/query.png" alt="query">
-        Запрос на сервер
+        <span>Запрос на сервер</span>
     </div>
     <div class="system__tobd system__arrow">
         <img src="@img/tobd.png" alt="tobd">
-        Обращение к БД
+        <span>Обращение к БД</span>
     </div>
     <div class="system__outbd system__arrow">
         <img src="@img/outbd.png" alt="outbd">
-        Данные с БД
+        <span>Данные с БД</span>
     </div>
     <div class="system__response system__arrow">
         <img src="@img/response.png" alt="response">
-        Ответ пользователю
+        <span>Ответ пользователю</span>
     </div>
 </div>
